[gd_scene load_steps=8 format=2]

[ext_resource path="res://Body.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character.gd" type="Script" id=2]
[ext_resource path="res://Arts/thoughts.png" type="Texture" id=3]
[ext_resource path="res://Arts/MoodParticle.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=2]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = true

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.046, 31.1388 )

[sub_resource type="CircleShape2D" id=3]
radius = 136.47

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="MoodParticles" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
position = Vector2( -0.540344, -61.0607 )
emitting = false
amount = 3
speed_scale = 0.25
randomness = 1.0
texture = ExtResource( 4 )
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, -40 )
initial_velocity = 20.0

[node name="Body" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.08072, 32.962 )
shape = SubResource( 1 )

[node name="ThoughtBubble" type="Sprite" parent="."]
position = Vector2( 43.0183, -81.3763 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
vframes = 2
hframes = 6

[node name="Panel" type="Panel" parent="."]
margin_left = 26.0
margin_top = 22.0
margin_right = 206.0
margin_bottom = 151.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Panel"]
margin_left = 1.0
margin_top = 3.0
margin_right = 176.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoodModArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoodModArea"]
shape = SubResource( 3 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BaseHypeTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CallFriendTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true
[connection signal="body_entered" from="MoodModArea" to="." method="ApplyMod"]
[connection signal="body_exited" from="MoodModArea" to="." method="ApplyMod"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="BaseHypeTimer" to="." method="_on_BaseHypeTimer_timeout"]
[connection signal="timeout" from="CallFriendTimer" to="." method="_on_CallFriendTimer_timeout"]
